syntax = "proto3";

package auth;

service UserService {
    rpc CreateUser (CreateUserDto) returns (User) {}
    rpc FindAllUser (Empty) returns (Users) {}  
    rpc FindOneUser (FindUserDto) returns (User) {}
    rpc UpdateUser (UpdateUserDto) returns (User) {}
    rpc RemoveUser (FindUserDto) returns (User) {}
    rpc QueryUsers (stream PagiantionDto) returns (stream Users) {}
}

message PagiantionDto {
    int32 page = 1;
    int32 skip = 2;
}

message UpdateUserDto {
    string id = 1;
    SocilaMedia socilaMedia = 2;
}

message FindUserDto {
    string id = 1;
}

message CreateUserDto {
    string username = 1;
    string password = 2;
    int32 age = 3; 
}

message Empty {}

message Users {
    repeated User users = 1;
}

message User {
    string id = 1;
    string username = 2;
    string password = 3;
    int32 age = 4;
    bool subscribed = 5;
    SocilaMedia socilaMedia = 6;
}

message SocilaMedia {
    optional string twitterUri = 1;
    optional string fbUri = 2;
}